2015-12-06  Natalia Portillo  <claunia@claunia.com>

	* CDRWin.cs:
	  Added extra track information.
	Corrected ReadLong for CD+G, subchannel should never come
	  along main channel on reading.

	* ImagePlugin.cs:
	  Added extra track information.
	Added audio media type.

	* Nero.cs:
	  Added extra track information.

	* ZZZRawImage.cs:
	  Added support for ReadLong and a single track and session
	  for optical discs.

2015-12-05  Natalia Portillo  <claunia@claunia.com>

	* VHD.cs:
	* Nero.cs:
	* CDRWin.cs:
	* Apple2MG.cs:
	* TeleDisk.cs:
	* ImageInfo.cs:
	* DiskCopy42.cs:
	* ImagePlugin.cs:
	* ZZZRawImage.cs:
	  Added hint for XML metadata creator to know which kind of
	  media the image represents.

2015-11-23  Natalia Portillo  <claunia@claunia.com>

	* VHD.cs:
	* Nero.cs:
	* CDRWin.cs:
	* Apple2MG.cs:
	* TeleDisk.cs:
	* ImageInfo.cs:
	* DiskCopy42.cs:
	* ImagePlugin.cs:
	* ZZZRawImage.cs:
	  Moved DiskType to commons.

2015-11-09  Natalia Portillo  <claunia@claunia.com>

	* CDRWin.cs:
	  Corrected typo in track calculation.

2015-11-09  Natalia Portillo  <claunia@claunia.com>

	* CDRWin.cs:
	  Corrected partition start and length calculations.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.DiscImages.csproj:
	  Upgrade .NET version to 4.0.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* ImagePlugin.cs:
	  Added ATA/ATAPI IDENTIFY DEVICE disk tags.

2015-10-18  Natalia Portillo  <claunia@claunia.com>

	* VHD.cs:
	* Nero.cs:
	* CDRWin.cs:
	* Apple2MG.cs:
	* TeleDisk.cs:
	* DiskCopy42.cs:
	* DiscImageChef.DiscImages.csproj:
	  Added specific console handling for standard, verbose, debug
	  and error outputs.

2015-10-05  Natalia Portillo  <claunia@claunia.com>

	* VHD.cs:
	* Nero.cs:
	* CDRWin.cs:
	* TeleDisk.cs:
	* Apple2MG.cs:
	* ImageInfo.cs:
	* DiskCopy42.cs:
	* ImagePlugin.cs:
	* ZZZRawImage.cs:
	* Properties/AssemblyInfo.cs:
	* DiscImageChef.DiscImages.csproj:
	  Moved disc image plugins to a separate library.
