@@ -1,5 +1,10 @@
 2015-12-06  Natalia Portillo  <claunia@claunia.com>
 
+	* Plugin.cs:
+	  Added documentation.
+
+2015-12-06  Natalia Portillo  <claunia@claunia.com>
+
 	* FFS.cs:
 	* BFS.cs:
 	* ODS.cs:
